log

Wed 13 Mar 2024 08:31:06 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:1:
exercises.c:13:1: error: expected identifier or ‘(’ before ‘{’ token
   13 | {
      | ^
exercises.c:21:3: error: expected identifier or ‘(’ before ‘return’
   21 | } return numeroMax;
      |   ^~~~~~
Compilation failed
5bd7dc0
Wed 13 Mar 2024 08:31:23 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:13:1: error: expected identifier or ‘(’ before ‘{’ token
   13 | {
      | ^
exercises.c:22:1: error: expected identifier or ‘(’ before ‘return’
   22 | return numeroMax;
      | ^~~~~~
Compilation failed
cc380b3
Wed 13 Mar 2024 08:31:38 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:13:1: error: expected identifier or ‘(’ before ‘{’ token
   13 | {
      | ^
Compilation failed
a44f88c
Wed 13 Mar 2024 08:31:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:18:13: error: unused variable ‘numeroMax’ [-Werror=unused-variable]
   18 |         int numeroMax = arr[i];
      |             ^~~~~~~~~
exercises.c:21:10: error: ‘numeroMax’ undeclared (first use in this function)
   21 |   return numeroMax;
      |          ^~~~~~~~~
exercises.c:21:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c29c56a
Wed 13 Mar 2024 08:32:21 PM UTC: 
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:18:13: error: unused variable ‘numeroMax’ [-Werror=unused-variable]
   18 |         int numeroMax = arr[i];
      |             ^~~~~~~~~
exercises.c:21:10: error: ‘numeroMax’ undeclared (first use in this function)
   21 |   return numeroMax;
      |          ^~~~~~~~~
exercises.c:21:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e5a3f19
Wed 13 Mar 2024 08:32:56 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:18:13: error: unused variable ‘numeroMax’ [-Werror=unused-variable]
   18 |         int numeroMax = arr[i];
      |             ^~~~~~~~~
exercises.c:21:10: error: ‘numeroMax’ undeclared (first use in this function)
   21 |   return numeroMax;
      |          ^~~~~~~~~
exercises.c:21:10: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
a74a4c4
Wed 13 Mar 2024 08:33:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:12:43: error: expected ‘;’ before ‘}’ token
   12 | int findMax(int arr[], int size) {return 0};
      |                                           ^
      |                                           ;
exercises.c: At top level:
exercises.c:13:1: error: expected identifier or ‘(’ before ‘{’ token
   13 | {
      | ^
Compilation failed
43a0a4f
Wed 13 Mar 2024 08:33:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:13:1: error: expected identifier or ‘(’ before ‘{’ token
   13 | {
      | ^
Compilation failed
b6b2e02
Wed 13 Mar 2024 08:33:42 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c:13:1: error: expected identifier or ‘(’ before ‘{’ token
   13 | {
      | ^
exercises.c:22:3: error: expected identifier or ‘(’ before ‘return’
   22 | } return numeroMax;
      |   ^~~~~~
Compilation failed
ae1234b
Wed 13 Mar 2024 08:34:02 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:13:1: error: expected identifier or ‘(’ before ‘{’ token
   13 | {
      | ^
Compilation failed
11c925b
Wed 13 Mar 2024 08:34:44 PM UTC: 
 exercises.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:17:9: error: expected expression before ‘int’
   17 |         int numeroMax = arr[i];
      |         ^~~
exercises.c: At top level:
exercises.c:19:3: error: expected identifier or ‘(’ before ‘return’
   19 | } return numeroMax;
      |   ^~~~~~
exercises.c: In function ‘findMax’:
exercises.c:19:1: error: control reaches end of non-void function [-Werror=return-type]
   19 | } return numeroMax;
      | ^
cc1: all warnings being treated as errors
Compilation failed
4cb6acb
Wed 13 Mar 2024 08:35:00 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:17:9: error: expected expression before ‘int’
   17 |         int numeroMax = arr[i];
      |         ^~~
exercises.c:19:10: error: ‘numeroMax’ undeclared (first use in this function)
   19 |   return numeroMax;
      |          ^~~~~~~~~
exercises.c:19:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:20:1: error: control reaches end of non-void function [-Werror=return-type]
   20 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3d89176
Wed 13 Mar 2024 08:35:14 PM UTC: 
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:17:9: error: expected expression before ‘int’
   17 |         int numeroMax = arr[i];
      |         ^~~
exercises.c:19:10: error: ‘numeroMax’ undeclared (first use in this function)
   19 |   return numeroMax;
      |          ^~~~~~~~~
exercises.c:19:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:20:1: error: control reaches end of non-void function [-Werror=return-type]
   20 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
65ae83b
Wed 13 Mar 2024 08:35:45 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
2686346
Wed 13 Mar 2024 08:36:38 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
d8cb0d9
Wed 13 Mar 2024 08:37:36 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
0de732a
Wed 13 Mar 2024 08:38:52 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
7559ec6
